--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="strength_attack">Strength</string>
     <string name="magic_attack">Magic</string>
     <string name="block">Block</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
